[package]
name = "bitarray"
version = "0.3.0"
edition = "2018"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
license = "MIT"
description = "A const generics driven bit array"
repository = "https://github.com/rust-cv/bitarray"
documentation = "https://docs.rs/bitarray/"
keywords = ["const", "generics", "bit", "array", "hamming"]
categories = ["no-std"]
readme = "README.md"

[features]
unstable-512-bit-simd = []

[dependencies]
space = { version = "0.11.0", optional = true }
serde = { version = "1.0.126", default-features = false, features = ["derive"], optional = true }
cfg-if = "1.0.0"
