[package]
name = "bitarray"
version = "0.9.1-alpha.0"
edition = "2018"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
license = "MIT"
description = "A const generics driven bit array specialized for hamming distance"
repository = "https://github.com/rust-cv/bitarray"
documentation = "https://docs.rs/bitarray/"
keywords = ["const", "generics", "bit", "array", "hamming"]
categories = ["no-std"]
readme = "README.md"

[features]
# This does not seem to build on all Windows machines (compiler has an access violation), and only works on Nightly.
unstable-512-bit-simd = []

[dependencies]
space = { version = "0.17.0", optional = true }
serde = { version = "1.0.126", default-features = false, features = ["derive"], optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
bincode = { version = "1.3.3", default-features = false }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }

[package.metadata.docs.rs]
all-features = true